Fix spacing in css file

--- a/styles/prosilver/theme/flags.css
+++ b/styles/prosilver/theme/flags.css
@@ -9,7 +9,8 @@ ul.flags li {
     display: inline-block;
     font-size: inherit;
     line-height: inherit;
-	padding-bottom:2px;
+	margin-top: 7px;
+	padding-bottom: 2px;
 	width: 6%;
 }
 
